envoy.yaml
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: httpbin
                http_filters:
                  - name: envoy.filters.http.wasm
                    config:
                      config:
                        name: test_wasm_plugin
                        vm_config:
                          vm_id: test_vm
                          runtime: envoy.wasm.runtime.v8
                          code:
                            local: { filename: target/wasm32-unknown-unknown/release/rust_wasm_filter.wasm }
                  - name: envoy.router
                    config: {}

  clusters:
    - name: httpbin
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: httpbin.org
            port_value: 443
      tls_context:
        sni: "httpbin.org"
    - name: web_service
      connect_timeout: 0.25s
      type: static
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 8099
    - name: ext_web_service
      connect_timeout: 0.25s
      type: static
      #type: STRICT_DNS
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 8086
            #address: docker.for.mac.localhost
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
